# ii

./: .dockerignore  .envrc  .gitignore  .incrementum-commit-message  2001.md  2016.md  AGENTS.md  DOMAIN.md  Dockerfile  IMPORT.md  Makefile  NOTES.md  PLAN-tailscale-service-mesh.md  PLAN.md  README.md  acme-brigid.toml  acme-fly.toml  acme-thor.toml  agent.go  agent_helpers.go  agent_run.go  agent_table_test.go  agent_testscript_test.go  analysis_chemistry.go  analysis_ingredients.go  analysis_recipe.go  batch.go  batch.peg  batch.peg.go  batch_log.go  batch_log_analysis_test.go  batch_log_parser.go  batch_log_parser_test.go  batch_peg_types.go  batch_profile.go  batch_profile_test.go  batch_test.go  batchlog  batchlog_dashboard.go  batchlog_index.html.tmpl  (+132 more)
agent/: errors.go  integration_test.go  jsonl_taildiff.go  jsonl_taildiff_test.go  store.go  store_test.go  store_test_helpers_test.go  taildiff.go  taildiff_test.go  types.go
agents/: agents.go  agents_shell_test.go
apps/: README.md
auth/: auth.go
aws/: convert-zones.fish  tasks.toml
batches/: 2025-12-14.batch
batchparser/: batch.peg  batch.peg.go  types.go
beeminder/: beeminder.go
cmd/: main.go
config/: apps  apps.toml  brigid.toml  config.go  fly-apps.toml  fly.toml  machines  ports  proxy.toml  publish.toml  redundant-commands  (+2 more)
non-linear/: .gitignore  AGENTS.md  analyze_recipe.py  example.py  label_batch_export.py  label_scenarios.py  label_utils.py  prompt.md  pyproject.toml
non-linear/creamery/: __init__.py  analysis.py  chemistry.py  constants.py  ingredients.py  label.py  model.py
(+2566 files in other folders)
